--- a/consoleProject/consoleProject.csproj
+++ b/consoleProject/consoleProject.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <Reference Include="BethanysPieShopHRM.Logic.dll">
+    <HintPath>../References/libs/BethanysPieShopHRM.Logic.dll</HintPath>
+  </Reference>
+  </ItemGroup>
 </Project>
